--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -49,22 +49,22 @@
             <div class="smallImageContainer">
                
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/background-login.jpg"
                     alt="">
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/gamepage.jpeg"
                     alt="">
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/logo.png"
                     alt="">
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/profileBACKGROUND.jpg"
                     alt="">
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/output.jpg"
                     alt="">
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
+                    src="/assets/images/treegamebackground.jpeg"
                     alt="">
                 <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
