--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,10 +1,10 @@
 .container {
     display: flex;
     flex-direction: row;
-    margin-left: 50px;
+    
     overflow-x: scroll;
     position: relative;
-    max-width: 50vw;
+    max-width: 90vw;
 }
 
 
@@ -42,18 +42,18 @@ body {
 }
  .prev {
     position: absolute;
-    left: 1px;
+    left: 100px;
     opacity: 0.3;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 100%;
+    transform: translateY(-70%);
 }
 
 .next {
-   position: absolute;
-    right: 1000px;
+   position: relative;
+    right: -200px;
     opacity: 0.3;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 120%;
+    transform: translateY(30%);
 } 
 
 .sidebar{
@@ -117,4 +117,11 @@ h1 {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+@media screen and (max-width: 1499px) {
+    .next,
+    .prev {
+        display: none;
+    }
 }
