--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -7,6 +7,7 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     position: relative;
+    color: white;
 }
 
 html {
@@ -22,6 +23,7 @@ html {
     gap: 20px;
     max-width: 1200px;
     margin: auto;
+    
 }
 
 .profile-image-section {
@@ -39,41 +41,72 @@ html {
 }
 
 .profile-about-section {
-    background: rgba(163, 78, 237, 0.8);
+    background-image: linear-gradient(rgba(131, 88, 248, 0.5), rgba(30, 0, 128, 0.5));
     border-radius: 10px;
     padding: 20px;
     margin-top: 20px;
+    width: 50vw;
 }
 
 .description-box {
-    background: rgba(163, 78, 237, 0.8); 
+    background-image: linear-gradient(rgba(131, 88, 248, 0.5), rgba(30, 0, 128, 0.5));
     border-radius: 10px;
     padding: 10px;
 }
 
 .profile-creations-section {
     grid-row: 2;
-    background: rgba(163, 78, 237, 0.8);
+    background-image: linear-gradient(rgba(131, 88, 248, 0.5), rgba(30, 0, 128, 0.5));
     border-radius: 10px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 50vw;
 }
 
 .creation-item a {
     color: white;
     text-decoration: none;
     margin-top: 10px;
+
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .profile-container {
         display: block;
     }
     .profile-image-section {
         margin-bottom: 20px;
     }
-}
+} */
 
+
+@media screen and (max-width: 1200px) {
+    .row {
+        flex-direction: column;
+    }
+    .profileContainer {
+        margin-top: 100px;
+    }
+    .profile-image {
+        width: unset;
+        height: unset;
+        height: 300px;
+        width: 300px;
+       
+    }
+    h2 {
+        text-align: center;
+    }
+    .profile-about-section, .profile-creations-section {
+        margin: auto;
+        width: 80%;  
+        
+    }
+
+    .creations-header {
+        margin-top: 100px;
+    }
+}
 
