--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/profile.css">
 
-<div class="container-fluid h-100">
+<div class="profileContainer container-fluid h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-4 col-sm-12 text-center profile-image-section">
             <img src="{{profileImageUrl}}" alt="Profile Image of {{userName}}" class="profile-image rounded-circle img-fluid">
@@ -13,7 +13,7 @@
                     <p>{{userDescription}}</p>
                 </div>
             </div>
-            <h2 class="mt-3">Creations</h2>
+            <h2 class="mt-3 creations-header">Creations</h2>
             <div class="profile-creations-section bg-custom mt-4 p-3 rounded">
                 {{#each creations}}
                 <div class="creation-item my-2">
