re worked the entire footer, and linked the navbar css file path correctly

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,18 +1,10 @@
- <link rel="stylesheet" href="/assets/css/footer.css">
+<link rel="stylesheet" href="/assets/css/footer.css">
+
 <footer class="footer">
-    <div="footer-container">
-                <div class="footer-text-center">
-                    <p class="text-muted">©2024 Indie Ignite Created by: Spencer Klinkowize, Michael Freeman,
-                        Christopher Cuellar, Anthony
-                        Santos, and Nicole
-                        Greenspun, All rights reserved.</p>
-                    <div class="contact">
-                        <h2>Reach out via email with any questions and we will get back to you in 3-5 business days!
-                        </h2>
-                        Email: <a href="mailto:indieignite2024@gmail.com">indieignite2024@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
+  <!-- Copyright -->
+  <div class="text-center p-3" style="bg-color: rgba(0, 0, 0, 0.05);">
+    Indie Ignite © 2024 Copyright: Created by us
+    
+  </div>
+  <!-- Copyright -->
 </footer>
