--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,17 +1,15 @@
 .footer {
-  /* position: fixed; */
-  background-color: #333;
+  
+  background-color: rgb(38, 8, 50);
   color: white;
-  padding: 10px 20px; 
- 
+  padding: 10px 20px;
+  margin-top: 50px; 
   bottom: 0; 
   left: 0;
-  width: 100%; 
+  width: 100vw; 
   box-shadow: 0 2px 10px rgba(0,0,0,0.5);
   text-align: center;
   z-index: 100;
 }
 
-body {
-  margin-bottom: 50px; 
-}
+
