--- a/public/assets/css/gamePage.css
+++ b/public/assets/css/gamePage.css
@@ -14,11 +14,13 @@ body {
     position: relative;
     margin: 0;
     justify-content: center;
+   
 }
 
 .pageContainer {
     justify-content: center;
     display: flex;
+   
 }
 
 x .gameTitle {
@@ -44,7 +46,8 @@ h5 {
     width: 20vw;
     text-align: center;
     margin-left: 50px;
-    color: white;
+    color: white; 
+    margin-top: 100px;
 }
 
 h6 {
@@ -52,7 +55,7 @@ h6 {
 }
 
 .aboutMe {
-    margin-top: 40px;
+   
     text-align: center;
     max-height: 525px;
     overflow-y: auto;
@@ -83,7 +86,7 @@ h6 {
     width: 20vw;
     text-align: center;
     margin-right: 50px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 
@@ -121,7 +124,7 @@ h6 {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 100px;
     align-items: center;
 
 }
@@ -322,7 +325,7 @@ a {
 }
 
 @media screen and (max-width: 899px) {
-
+    
     .pageContainer,
     .sidebarLeft,
     .displayContainer {
@@ -332,7 +335,9 @@ a {
         box-sizing: border-box;
         overflow: auto;
     }
-
+    .displayContainer {
+        margin-top: 100px;
+    }
     .featuredImage {
         width: unset;
         height: unset;
