--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,4 +1,5 @@
 .container {
+    
     display: flex;
     flex-direction: row;
     
@@ -10,7 +11,7 @@
 
 
 .largeContainer {
-    margin-top: 100px;
+    
     position: relative;
     
 
@@ -79,7 +80,7 @@ input {
 
 
 h1 {
-    
+    padding-top: 50px;
     margin-left: 100px;
     
     color: white;
@@ -101,6 +102,7 @@ h1 {
    /* position: absolute; */
    display: block;
    position: relative;
+   padding-top: 100px;
    
    
 }
