--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -1,19 +1,19 @@
 .navbar {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   width: 100vw;
+    position: fixed; 
+    z-index: 2;
+   
+    
+    
 }
 
 .navbar-container {
-    width: 100%;
+    width: 100vw;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.navbar-brand {
+/* .navbar-brand {
     font-size: 24px;
     color: white;
     text-decoration: none;
@@ -30,6 +30,6 @@
 
 .navbar-links a:hover {
     text-decoration: underline;
-} 
+}  */
 
 
