--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -13,7 +13,7 @@
         </nav> --}}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="/public/assets/css/navbar.css">
+  <link rel="stylesheet" href="/assets/css/navbar.css">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
