--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
 
-
-
     <title>{{title}}</title>
 </head>
-
 <body>
     {{> navbar}}
     {{{body}}}
     {{> footer}}
-
+    <script src="/public/assets/js/logout.jss"></script>
 </body>
 
 
