--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -42,8 +42,7 @@
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Log Out</a>
+                    <a href="#" id="logoutButton" class="nav-link">Logout</a>
                 </li>
             </ul>
             <form class="d-flex">
