fixed bug with support package at low px width

--- a/public/assets/css/gamePage.css
+++ b/public/assets/css/gamePage.css
@@ -354,7 +354,13 @@ a {
     }
 
     .supportContainer {
+        width: 100vw;
         margin-top: 25px;
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+
+     
     }
 
 
