--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -75,9 +75,18 @@ input {
     margin:20px;
     display: flex;
     z-index: -1;
+    text-decoration: none;
+    
     
 }
-
+a {
+    text-decoration: none;
+}
+ h5 {
+   
+  
+    color: white;
+}
 
 h1 {
     padding-top: 50px;
