--- a/views/partials/gamecard.handlebars
+++ b/views/partials/gamecard.handlebars
@@ -1,4 +1,4 @@
-<a href="/game?id={{id}}">
+<a href="/game/{{id}}">
 <div class="gamecard" id="{{Id}}">
     <div class="card" style="width: 18rem;">
         {{#if image}}
