--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -25,9 +25,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <img src="/assets/images/logo.png" alt="AniName Logo" style="max-height:35px;">
+            </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
-              
+                <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+              </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
