--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li class="nav-item logo">
                 <img src="/assets/images/logo.png" alt="AniName Logo" style="max-height:35px;">
             </li>
                 <li class="nav-item">
