--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -33,6 +33,9 @@
                 <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
               </li>
+              <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/upload">Upload</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
