--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -49,8 +49,8 @@
             <div class="smallImageContainer">
                
                 <img class="smallImage"
-                    src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
-                    alt="">
+                    src="{{game.image}}"
+                    alt="{{game.title}}">
                 <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
                     alt="">
