created routes to render profile data for current user session and when viewing other profiles and updated seeds

--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -12,7 +12,7 @@
     <div class="pageContainer">
         <aside class="sidebarLeft">
             <div class="aboutMe" >
-                <a href="#">{{game.user.username}}</a>
+                <a href="/profile/{{game.user.id}}">{{game.user.username}}</a>
                 <h5>About Me:</h5>
                 <p> {{game.user.about_me}}
                 <p>
