--- a/views/partials/gamecard.handlebars
+++ b/views/partials/gamecard.handlebars
@@ -7,7 +7,7 @@
         <img class="card-img-top" src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg">
         {{/if}}
         <div class="card-body">
-            <h5 aclass="card-title">{{title}} {{upvotes}}</h5>
+            <h5 class="card-title">{{title}} {{upvotes}}</h5>
         </div>
     </div>
 </div>
