--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     {{> navbar}}
     {{{body}}}
     {{> footer}}
-    <script src="/public/assets/js/logout.jss"></script>
+    <script src="/public/assets/js/logout.js"></script>
 </body>
 
 
