--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,8 +4,11 @@
 <div class="profileContainer container-fluid h-100">
     <div class="row align-items-center h-100">
         <div class="col-md-4 col-sm-12 text-center profile-image-section">
+            <h1>{{user.username}}</h1>
             <img src="{{user.profile_picture}}" alt="Profile Image of {{userName}}" class="profile-image rounded-circle img-fluid">
         </div>
+        
+        
         <div class="col-md-8 col-sm-12">
             <h2 class="mt-3">About Me!</h2>
             <div class="profile-about-section bg-custom p-4 shadow rounded">
