stacked the containers when the screensize gets smaller

--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -18,7 +18,7 @@
                 <h1>Upload Your Game</h1>
             </div>
         </div>
-        <div class="content-container mt-2">
+        <div id="main-content-container" class="content-container mt-2">
             <div class="upload-section mt-4">
                 <form>
                     <div class="mb-3">
@@ -47,7 +47,7 @@
                 </div>
                 <button type="button" class="btn btn-primary">Submit</button>
             </div>
-            <div class="supporter-packages mt-4">
+            <div id="supporter-packages" class="supporter-packages mt-4">
                 <h3>Create Supporters Packages</h3>
                 <form action="/api/games" method="POST" enctype="multipart/form-data">
                     <!-- Level One -->
