--- a/public/assets/css/uploadpage.css
+++ b/public/assets/css/uploadpage.css
@@ -47,6 +47,7 @@ h1{
     align-items: center;
     justify-content: center;
     text-align: center;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, height 0.5s ease-in-out;
 }
 
 @media (max-width: 768px) {
@@ -60,4 +61,11 @@ h1{
         min-height: 80px;
         min-width: 40px;
     }
+}
+
+
+.content-container,
+.supporter-packages {
+    
+    margin: 0 auto;
 }
