reworked profile page to be more responsive

--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -43,7 +43,7 @@
                 <img class="smallImage"
                     src="{{game.image}}"
                     alt="{{game.title}}">
-                <img class="smallImage"
+                {{!-- <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
                     alt="">
                 <img class="smallImage"
@@ -69,7 +69,7 @@
                     alt="">
                 <img class="smallImage"
                     src="/assets/images/stock-vector-vector-illustration-neon-future-game-pad-background-1861318969.jpg"
-                    alt="">
+                    alt=""> --}}
             </div>
             <button class="slide next"> <i class="icon">next</i></button>
         <div class="descriptionContainer">
