--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -25,7 +25,23 @@ html {
     margin: auto;
     
 }
-
+.textContainer {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+.editBtn {
+    float:right;
+    margin-top: 25px;
+    margin-right: 20px;
+   
+}
+.editBtn a{
+    color:rgb(81, 24, 99)
+}
 .profile-image-section {
     grid-row: 1 / 3;
     display: flex;
@@ -70,6 +86,10 @@ html {
     text-decoration: none;
     margin-top: 10px;
 
+}
+
+.userContainer {
+    margin-top: 100px;
 }
 
 /* @media (max-width: 768px) {
