--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,25 +1,32 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/profile.css">
 
-<div class="profileContainer container-fluid h-100">
-    <div class="row align-items-center h-100">
-        <div class="col-md-4 col-sm-12 text-center profile-image-section">
+
+<div>
+    <button class="editBtn">
+        <a href="/profileEdit">Edit Profile</a>
+    </button>
+</div>
+<div class="profileContainer">
+
+    <div class="userContainer">
+        <div class="profile-image-section">
             <h1>{{user.username}}</h1>
             <img src="{{user.profile_picture}}" alt="Profile Image of {{userName}}" class="profile-image rounded-circle img-fluid">
         </div>
         
         
-        <div class="col-md-8 col-sm-12">
-            <h2 class="mt-3">About Me!</h2>
-            <div class="profile-about-section bg-custom p-4 shadow rounded">
+        <div class="textContainer">
+            <h2 >About Me!</h2>
+            <div class="profile-about-section">
                 <div class="description-box">
                     <p>{{user.about_me}}</p>
                 </div>
             </div>
-            <h2 class="mt-3 creations-header">Creations</h2>
+            <h2 class="">Creations</h2>
             <div class="profile-creations-section bg-custom mt-4 p-3 rounded">
                 {{#each creations}}
-                <div class="creation-item my-2">
+                <div class="creation-item">
                     <a href="/game/{{this.id}}" class="text-white">{{this.title}}</a>
                 </div>
                 {{/each}}
